# solana-client-wasip2

./: Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  transport.rs
src/rpc/: client.rs  config.rs  methods.rs  mod.rs  response.rs
tests/: integration_methods.rs  lifecycle.rs  methods.rs  requests.rs  rpc_coverage.rs  tx.rs  wasm_smoke.rs
tests/harness/: mod.rs
wasm-smoke/: Cargo.toml
wasm-smoke/src/: main.rs
